# fluxar

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/ast/: expr.rs  mod.rs  scanner.rs  statements.rs  tokens.rs
src/core/: environment.rs  function.rs  mod.rs  resolver.rs  type_.rs
src/lang/: cli.rs  interpreter.rs  parser.rs  scanner.rs
tests/: mod.rs
