[package]
name = "Fluxar"
version = "0.1.0"
edition = "2021"

[dependencies]
cranelift = "0.124.3"
cranelift-codegen = "0.124.3"
cranelift-frontend = "0.124.3"
cranelift-module = "0.124.3"
cranelift-native = "0.124.3"
cranelift-object = "0.124.3"

[[bin]]
name = "fluxar"
path = "src/main.rs"

[dev-dependencies]
pretty_assertions = "1.4.1"
